2009-10-02  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Client/ObjectValue.cs: Allow setting the type
	  name.

	* Mono.Debugging.Evaluation/NRefactoryEvaluator.cs: Added null
	  check.

2009-09-29  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Evaluation\ObjectValueAdaptor.cs: Add missing
	  length check.

2009-09-25  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Evaluation/ValueReference.cs:
	* Mono.Debugging.Evaluation/ObjectValueAdaptor.cs: Some minor
	  fixes.

2009-09-23  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Client/BreakpointStore.cs: Clear(): Properly
	  duplicate breakpoint list.

2009-09-23  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Client/ObjectValue.cs: Added some debug code.

	* Mono.Debugging.Evaluation/ICollectionAdaptor.cs:
	  CreateElementValue is not used anymore.

	* Mono.Debugging.Evaluation/ExpressionEvaluator.cs: Make
	  serializable some exceptions.

	* Mono.Debugging.Evaluation/NRefactoryEvaluator.cs: Added some
	  preventive error checks.

	* Mono.Debugging.Evaluation/ArrayElementGroup.cs: When
	  generating an array item, use NameDisplayString when defined
	  for the type. Fixed upperBound value for multidimensional
	  arrays.

2009-09-22  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Evaluation/ObjectValueAdaptor.cs: Added
	  missing null check.

2009-09-22  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Evaluation/TypeValueReference.cs:
	* Mono.Debugging.Evaluation/ObjectValueAdaptor.cs:
	* Mono.Debugging.Evaluation/NRefactoryEvaluator.cs: Add
	  support for examining nested types.

2009-09-22  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Client/DebuggerSession.cs: Improve error
	  handling. Exceptions can now be intercept using a delegate.

2009-09-22  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Evaluation/NRefactoryEvaluator.cs: Try to
	  resolve type names using the imported namespaces.
